Added view, remove

--- a/settings.html
+++ b/settings.html
@@ -30,6 +30,7 @@
             <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="keyPairGenerate" class="pure-menu-link"> Generate</a></li>
             <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="keyPairImport" class="pure-menu-link"> Import</a></li>
             <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="keyPairView" class="pure-menu-link"> View</a></li>
+            <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="keyPairRemove" class="pure-menu-link"> Remove</a></li>
           </ul>
       </nav>
       <article>
