--- a/settings.html
+++ b/settings.html
@@ -20,17 +20,16 @@
     <!-- Code -->
     <script src="src/classes/config.js"></script>
     <script src="src/classes/storage.js"></script>
-    <script src="src/classes/keyring.js"></script>
     <script src="src/app.js"></script>
   </head>
   <body>
     <div id="container" >
       <nav class="pure-menu pure-menu-horizontal">
           <ul class="pure-menu-list">
-            <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="keyPairGenerate" class="pure-menu-link"> Generate</a></li>
-            <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="keyPairImport" class="pure-menu-link"> Import</a></li>
-            <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="keyPairView" class="pure-menu-link"> View</a></li>
-            <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="keyPairRemove" class="pure-menu-link"> Remove</a></li>
+            <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="keyGenerate" class="pure-menu-link"> Generate</a></li>
+            <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="keyImport" class="pure-menu-link"> Import</a></li>
+            <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="keyView" class="pure-menu-link"> View</a></li>
+            <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="keyRemove" class="pure-menu-link"> Remove</a></li>
           </ul>
       </nav>
       <article>
