--- a/settings.html
+++ b/settings.html
@@ -30,6 +30,7 @@
             <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="keyImport" class="pure-menu-link"> Import</a></li>
             <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="keyView" class="pure-menu-link"> View</a></li>
             <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="keyRemove" class="pure-menu-link"> Remove</a></li>
+            <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="publicImport" class="pure-menu-link"> PubImport</a></li>
           </ul>
       </nav>
       <article>
