--- a/settings.html
+++ b/settings.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Pretty Good Plugin (Settings)</title>
+    <title>Pretty Good Plugin (Settings) test</title>
 
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="css/pure-min.css">
