--- a/test.html
+++ b/test.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
   <body>
-    <p>https://1pg.pw/m/111</p>
-    <p>https://1pg.pw/k/222</p>
-    <textarea>https://1pg.pw/m/1234</textarea>
+    <p>https://localhost/x/0</p>
+    <p>https://localhost/x/1</p>
+    <textarea>https://localhost/x/2</textarea>
   </body>
 </html>
