Add server and tests

--- a/popup.html
+++ b/popup.html
@@ -1,1 +1,11 @@
-hello
+<html>
+  <head>
+    <!-- Vendors CSS -->
+    <link rel="stylesheet" href="css/pure-min.css">
+  </head>
+  <body>
+    <div id="container">
+      <a href="">Settings</a>
+    </div>
+  </body>
+</html>
