--- a/play/index.html
+++ b/play/index.html
@@ -22,7 +22,7 @@
 
         <div class="col c5">
           <div class="row">
-            <textarea rv-value="message"></textarea>
+            <textarea rv-value="message" style="height: 200px; width: 95%"></textarea>
           </div>
           <div class="row">
             <button rv-on-click="submit" class="btn btn-b btn-sm smooth"> Enter </button>
