--- a/chrome/settings.html
+++ b/chrome/settings.html
@@ -20,7 +20,7 @@
     <!-- Code -->
     <script src="src/classes/config.js"></script>
     <script src="src/classes/storage.js"></script>
-    <script src="src/app.js"></script>
+    <script src="src/settings.js"></script>
   </head>
   <body>
     <div id="container" >
