Create a message channel from iframe to content

--- a/chrome/iframe.html
+++ b/chrome/iframe.html
@@ -18,6 +18,11 @@
     <script src="src/iframe.js"></script>
   </head>
   <body>
-    <b>Hi. I am an iframe.</b>
+    <div id="iframe">
+      <div id="header">
+        Encrypt this!
+        <span rv-on-click="close" class="close">x</span>
+      </div>
+    </div>
   </body>
 </html>
