--- a/chrome/settings.html
+++ b/chrome/settings.html
@@ -20,6 +20,8 @@
     <!-- Code -->
     <script src="src/classes/config.js"></script>
     <script src="src/classes/storage.js"></script>
+    <script src="src/classes/PublicKey.js"></script>
+    <script src="src/classes/AddressBook.js"></script>
     <script src="src/settings.js"></script>
   </head>
   <body>
