--- a/chrome/iframe.html
+++ b/chrome/iframe.html
@@ -13,8 +13,8 @@
     <script src="./bower_components/less/dist/less.js"></script>
 
     <!-- Code -->
-    <script src="src/classes/config.js"></script>
-    <script src="src/classes/storage.js"></script>
+    <script src="src/classes/Config.js"></script>
+    <script src="src/classes/Storage.js"></script>
     <script src="src/iframe.js"></script>
   </head>
   <body>
