Config and modules changes

--- a/chrome/settings.html
+++ b/chrome/settings.html
@@ -18,10 +18,7 @@
     <script src="./bower_components/less/dist/less.js"></script>
 
     <!-- Code -->
-    <script src="src/classes/Config.js"></script>
-    <script src="src/classes/Storage.js"></script>
-    <script src="src/classes/PublicKey.js"></script>
-    <script src="src/classes/AddressBook.js"></script>
+    <script src="src/modules.js"></script>
     <script src="src/settings.js"></script>
   </head>
   <body>
