--- a/chrome/settings.html
+++ b/chrome/settings.html
@@ -18,8 +18,7 @@
     <script src="./bower_components/less/dist/less.js"></script>
 
     <!-- Code -->
-    <script src="src/modules.js"></script>
-    <script src="src/settings.js"></script>
+    <script src="src/admin.js"></script>
   </head>
   <body>
     <div id="container" >
