Update view template. Fixes.

--- a/chrome/settings.html
+++ b/chrome/settings.html
@@ -24,11 +24,11 @@
     <div id="container" >
       <nav class="pure-menu pure-menu-horizontal">
           <ul class="pure-menu-list">
-            <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="keyGenerate" class="pure-menu-link"> Generate</a></li>
-            <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="keyImport" class="pure-menu-link"> Import</a></li>
-            <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="keyView" class="pure-menu-link"> View</a></li>
-            <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="keyRemove" class="pure-menu-link"> Remove</a></li>
-            <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="publicImport" class="pure-menu-link"> PubImport</a></li>
+            <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="privateKeyGenerate" class="pure-menu-link"> Generate</a></li>
+            <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="privateKeyImport" class="pure-menu-link"> Import</a></li>
+            <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="privateKeyView" class="pure-menu-link"> View</a></li>
+            <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="privateKeyRemove" class="pure-menu-link"> Remove</a></li>
+            <li class="pure-menu-item"><a rv-on-click="template" href="#" rel="publicKeyImport" class="pure-menu-link"> PubImport</a></li>
           </ul>
       </nav>
       <article>
