--- a/chrome/settings.html
+++ b/chrome/settings.html
@@ -30,6 +30,7 @@
             <li class="pure-menu-item"><a href="#/key/view" class="pure-menu-link"> View</a></li>
             <li class="pure-menu-item"><a href="#/key/remove" class="pure-menu-link"> Remove</a></li>
             <li class="pure-menu-item"><a href="#/pub/import" class="pure-menu-link"> PubImport</a></li>
+            <li class="pure-menu-item"><a href="#/pub/list" class="pure-menu-link"> PubList</a></li>
           </ul>
       </nav>
       <div id="notify" rv-on-click="notify.clear">
