--- a/chrome/unittests.html
+++ b/chrome/unittests.html
@@ -19,11 +19,11 @@
     <script src="src/admin.js"></script>
 
     <!-- Tests -->
-    <script src="tests/lib/init.js"></script>
-    <script src="tests/lib/testkeys.js"></script>
+    <script src="unittests/lib/init.js"></script>
+    <script src="unittests/lib/testkeys.js"></script>
 
-    <script src="tests/keystore-localstore.js"></script>
+    <script src="unittests/keystore-localstore.js"></script>
 
-    <script src="tests/lib/run.js"></script>
+    <script src="unittests/lib/run.js"></script>
   </body>
 </html>
