Keystore LocalStore tests done

--- a/chrome/unittests.html
+++ b/chrome/unittests.html
@@ -14,6 +14,7 @@
     <script src="./bower_components/rivets/dist/rivets.bundled.min.js"></script>
     <script src="./bower_components/openpgp/dist/openpgp.min.js"></script>
     <script src="./bower_components/mocha/mocha.js"></script>
+    <script src="./bower_components/expect/index.js"></script>
 
     <!-- Code -->
     <script src="src/admin.js"></script>
