PrivateKeyStore unit tests and relevant code fixes

--- a/chrome/unittests.html
+++ b/chrome/unittests.html
@@ -24,6 +24,7 @@
     <script src="unittests/lib/testkeys.js"></script>
 
     <script src="unittests/keystore-localstore.js"></script>
+    <script src="unittests/privatekey-localstore.js"></script>
 
     <script src="unittests/lib/run.js"></script>
   </body>
