Add message store and tests

--- a/chrome/unittests.html
+++ b/chrome/unittests.html
@@ -25,6 +25,7 @@
 
     <script src="unittests/keystore-localstore.js"></script>
     <script src="unittests/privatekey-localstore.js"></script>
+    <script src="unittests/message-localstore.js"></script>
 
     <script src="unittests/lib/run.js"></script>
   </body>
