--- a/chrome/settings.html
+++ b/chrome/settings.html
@@ -19,6 +19,7 @@
     <script src="./bower_components/less/dist/less.js"></script>
 
     <!-- Code -->
+    <script src="src/modules.js"></script>
     <script src="src/admin.js"></script>
   </head>
   <body>
