--- a/chrome/iframe.html
+++ b/chrome/iframe.html
@@ -22,10 +22,13 @@
         Encrypt this!
         <span rv-on-click="close" class="close">x</span>
       </div>
-      <input rv-value="filter" rv-on-keyup="doFilter" placeholder="filer">
-      <ul rv-each-key="foundKeys">
-        <li>{ key.getPrimaryUser }</li>
-      </ul>
+      <div id="content">
+        <input id="filter" rv-value="filter" rv-on-keyup="doFilter" placeholder="filer">
+        <ul rv-each-key="foundKeys">
+          <li><input type="checkbox" name="{ key.fingerprint }" /><span rv-on-click="select">{ key.getPrimaryUser }</span></li>
+        </ul>
+        <button rv-on-click="submit">encrypt</button>
+      </div>
     </div>
   </body>
 </html>
