--- a/chrome/iframe.html
+++ b/chrome/iframe.html
@@ -23,9 +23,9 @@
         <span rv-on-click="close" class="close">x</span>
       </div>
       <div id="content">
-        <input id="filter" rv-value="filter" rv-on-keyup="doFilter" placeholder="filer">
-        <ul rv-each-key="foundKeys">
-          <li><input type="checkbox" name="{ key.fingerprint }" /><span rv-on-click="select">{ key.getPrimaryUser }</span></li>
+        <input id="filter" rv-value="filter" rv-on-keyup="doFilter" placeholder="filter">
+        <ul>
+          <li rv-each-key="foundKeys"><input type="checkbox" name="{ key.fingerprint }" /><span rv-on-click="select">{ key.getPrimaryUser }</span></li>
         </ul>
         <button rv-on-click="submit">encrypt</button>
       </div>
