--- a/play/index.html
+++ b/play/index.html
@@ -10,6 +10,7 @@
     <!-- Vendors JS -->
     <script src="./bower_components/rivets/dist/rivets.bundled.min.js"></script>
     <script src="./bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="./bower_components/openpgp/dist/openpgp.min.js"></script>
 
     <!-- Code -->
     <script src="js/code.js"></script>
