--- a/play/index.html
+++ b/play/index.html
@@ -24,6 +24,9 @@
             <textarea rv-value="message" style="height: 200px; width: 95%"></textarea>
           </div>
           <div class="row">
+            <textarea style="height: 200px; width: 95%"></textarea>
+          </div>
+          <div class="row">
             <button rv-on-click="submit" class="btn btn-b btn-sm smooth"> Enter </button>
           </div>
         </div>
