--- a/chrome/iframe.html
+++ b/chrome/iframe.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet/less" type="text/css" href="css/iframe.less">
 
     <!-- Vendors JS -->
+    <script src="./bower_components/pathjs/path.min.js"></script>
     <script src="./bower_components/sightglass/index.js"></script>
     <script src="./bower_components/rivets/dist/rivets.js"></script>
     <script src="./bower_components/openpgp/dist/openpgp.min.js"></script>
@@ -19,34 +20,22 @@
   </head>
   <body>
     <div id="error" rv-if="error" rv-text="error"></div>
+
     <div id="password" rv-hide="initVars.isDecrypted">
         <input rv-value="password" rv-on-keyup="enterPassword" type="password" placeholder="private key password">
     </div>
+
     <div id="main" rv-show="initVars.isDecrypted">
       <div class="menu">
           <ul>
-              <li class="active" rel="address-book" rv-on-click="tabs.address-book">Address Book</li>
-              <li rel="cloud-keys" rv-on-click="tabSelect">Cloud Keys</li>
-              <li rel="private-key" rv-on-click="tabSelect">Private Key</li>
+            <li class="active"><a href="#/ab">Address Book</a></li>
+            <li><a href="#/ck">Cloud Keys</a></li>
+            <li><a href="#/pk">Private Key</a></li>
           </ul>
       </div>      
-
-      <div id="address-book" class="tab" rv-show="tabAddressBook">
-        <input class="filter" rv-value="filter" rv-on-keyup="doFilter" placeholder="filter">
-        <ul>
-          <li rv-on-click="select" rv-each-key="foundKeys"><input type="checkbox" rv-checked="key.selected" /><span rv-text="key.name"></span></li>
-        </ul>
-        <button rv-on-click="submit">encrypt</button>
+      <div id="article">
       </div>
-
-      <div id="cloud-keys" class="tab" rv-show="tabCloudKeys">
-        Work in progress ...
-      </div>
-
-      <div id="private-key" class="tab" rv-show="tabPrivateKey">
-        Private key
-      </div>
-
     </div>
+
   </body>
 </html>
