--- a/chrome/iframe.html
+++ b/chrome/iframe.html
@@ -28,7 +28,7 @@
     <div id="main" rv-show="initVars.isDecrypted">
       <div class="menu">
           <ul>
-            <li class="active"><a href="#/ab">Address Book</a></li>
+            <li><a rv-class-active="currentArticle" href="#/ab">Address Book</a></li>
             <li><a href="#/ck">Cloud Keys</a></li>
             <li><a href="#/pk">Private Key</a></li>
           </ul>
