--- a/chrome/iframe.html
+++ b/chrome/iframe.html
@@ -33,8 +33,8 @@
             <li><a rel="privateKey"  href="#/pk">Private Key</a></li>
           </ul>
       </div>      
-      <div id="article">
-      </div>
+      <article>
+      </article>
     </div>
 
   </body>
