Update code for iframe -> browser

--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -5,7 +5,7 @@
     <title>Pretty Good Plugin (Menu)</title>
 
     <!-- Local CSS -->
-    <link rel="stylesheet/less" type="text/css" href="css/iframe.less">
+    <link rel="stylesheet/less" type="text/css" href="css/browser.less">
 
     <!-- Vendors JS -->
     <script src="./bower_components/pathjs/path.min.js"></script>
@@ -16,7 +16,7 @@
 
     <!-- Code -->
     <script src="src/modules.js"></script>
-    <script src="src/iframe.js"></script>
+    <script src="src/browser.js"></script>
   </head>
   <body>
     <div id="error" rv-if="error" rv-text="error"></div>
