--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -19,10 +19,11 @@
     <script src="src/browser.js"></script>
   </head>
   <body>
-    <div id="error" rv-if="error" rv-text="error"></div>
-
     <div id="password" rv-hide="initVars.isDecrypted">
+      <div class="error" rv-if="error" rv-text="error"></div>
+      <div class="center">
         <input rv-value="password" rv-on-keyup="enterPassword" type="password" placeholder="private key password">
+      </div>
     </div>
 
     <div id="main" rv-show="initVars.isDecrypted">
