disable encryption if no textarea

--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -29,7 +29,7 @@
     <div id="main" rv-show="initVars.isDecrypted">
       <div class="menu">
           <ul id="tabs">
-            <li><a rel="addressBook" href="#/ab">Address Book</a></li>
+            <li><a rel="addressBook" href="#/ab">Encrypt</a></li>
             <li><a rel="cloudKeys"   href="#/ck">Cloud Keys</a></li>
             <li><a rel="privateKey"  href="#/pk">Private Key</a></li>
           </ul>
