Renames + lock password (partial)

--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -29,9 +29,10 @@
     <div id="main" rv-show="initVars.isDecrypted">
       <div class="menu">
           <ul id="tabs">
-            <li><a rel="addressBook" href="#/ab">Encrypt</a></li>
-            <li><a rel="cloudKeys"   href="#/ck">Cloud Keys</a></li>
-            <li><a rel="privateKey"  href="#/pk">Private Key</a></li>
+            <li><a rel="encrypt" href="#/a">Encrypt</a></li>
+            <li><a rel="myKey"   href="#/b">My Key</a></li>
+            <li><a rel="control" href="#/c">Control</a></li>
+            <li><a rel="lock"    href="#/d">Lock</a></li>
           </ul>
       </div>      
       <article>
