--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -20,13 +20,13 @@
   </head>
   <body>
     <div class="error" rv-if="error" rv-text="error"></div>
-    <div id="password" rv-hide="initVars.isDecrypted">
+    <div id="password" rv-hide="isDecrypted">
       <div class="center">
         <input rv-value="password" rv-on-keyup="enterPassword" type="password" placeholder="private key password">
       </div>
     </div>
 
-    <div id="main" rv-show="initVars.isDecrypted">
+    <div id="main" rv-show="isDecrypted">
       <div class="menu">
           <ul id="tabs">
             <li><a rel="encrypt" href="#/a">Encrypt</a></li>
