--- a/chrome/browser.html
+++ b/chrome/browser.html
@@ -22,13 +22,13 @@
     <div class="error" rv-if="error" rv-text="error"></div>
 
     <div rv-show="initVars.hasPrivateKey">
-      <div id="password" rv-hide="isDecrypted">
+      <div id="password" rv-hide="initVars.isDecrypted">
         <div class="center">
           <input rv-value="password" rv-on-keyup="enterPassword" type="password" placeholder="private key password">
         </div>
       </div>
 
-      <div id="main" rv-show="isDecrypted">
+      <div id="main" rv-show="initVars.isDecrypted">
         <div class="menu">
             <ul id="tabs">
               <li><a rel="encrypt" href="#/a">Encrypt</a></li>
